Fri Aug  6 17:09:53 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in: to not link with glib threads, not needed anymore
	* libgamin/gam_api.c: fixed timeouts values
	* tests/Makefile.am tests/testing.c tests/result/4 tests/scenario/4.tst:
	  adding more tests, especially transparent restart when the server
	  is killed.

Fri Aug  6 14:29:47 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_fork.c: avoid generating zombies

Thu Aug  5 16:51:33 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: release of 0.0.5
	* doc/gamin-api.xml doc/gamin-refs.xml: rebuilt

Thu Aug  5 16:23:18 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_event.h server/gam_inotify.c server/gam_server.c:
	  patches from John McCutchan, inotify back-end update and 
	  bugfixes on error conditions in gam_server.c

Thu Aug  5 11:55:59 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_fork.c: markmc pointed at a problem when forking
	  a daemon and exiting, the exit(0) called the ORBit atexit 
	  handlers in the child.

Thu Aug  4 16:55:38 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: release of 0.0.4

Wed Aug  4 14:34:27 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* TODO: update
	* libgamin/gam_error.c libgamin/gam_error.h server/gam_error.c
	  server/gam_error.h: cleanup some warnings when compiling
	  on Fedora Core
	* server/gam_poll.c: unused variable
	* tests/Makefile.am: cleanup before running "make tests"

Wed Aug  4 13:14:02 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/fam.h: fix a bug compiling KDE reported by than
	* server/gam_poll.c: some code cleanup
	* tests/testing.c: adding an expect command way better than wait
	* tests/result/[1-3] tests/scenario/[1-3].tst tests/Makefile.am:
	  started setting up reliable regression testing, discovered a 
	  strange timeout problem with gam_server to be investigated
	  left as a comment on 3.tst
