@@ -1,0 +1,14 @@
+INCLUDES =						\
+	$(default_includes)				\
+	-I$(top_builddir) 				\
+	-I$(top_srcdir)/lib				\
+	-DGAM_DEBUG_ENABLED
+
+lib_LIBRARIES = libgamin_shared.a
+
+libgamin_shared_a_SOURCES =				\
+	gam_event.c					\
+	gam_event.h					\
+	gam_error.c					\
+	gam_error.h
+
