@@ -1,7 +1,9 @@
 INCLUDES =						\
 	$(default_includes)				\
 	-I$(top_builddir) 				\
+	-I$(top_srcdir)/lib				\
 	-DBINDIR=\""$(bindir)"\"			\
+	-DBUILDDIR=\""$(top_builddir)"\"		\
 	-DGAM_DEBUG_ENABLED
 
 EXTRA_DIST = 						\
@@ -17,13 +19,11 @@ libgamin_1_la_SOURCES =					\
 	gam_api.c					\
 	gam_data.c					\
 	gam_data.h					\
-	gam_error.c					\
-	gam_error.h					\
 	gam_fork.c					\
 	gam_fork.h					\
 	gam_protocol.h
 
-libgamin_1_la_LIBADD = 
+libgamin_1_la_LIBADD = $(top_builddir)/lib/libgamin_shared.a 
 
 libgamin_1_la_LDFLAGS = -Wl,--version-script=gamin_sym.version \
                         -version-info @GAMIN_VERSION_INFO@
