@@ -1,3 +1,11 @@
+Tue Aug 10 10:56:49 CEST 2004 Daniel Veillard <veillard@redhat.com>
+
+	* Makefile.am TODO configure.in libgamin/Makefile.am libgamin/TODO
+	  server/Makefile.am lib/*: applied cleanup patch from John McCutchan
+	  then rebuilt the lib/ subdir providing shared code between the
+	  client lib and the server (gam_error and gam_event).
+	* server/gam_inotify.c: update as part of John McCutchan patch.
+
 Fri Aug  6 17:09:53 CEST 2004 Daniel Veillard <veillard@redhat.com>
 
 	* configure.in: to not link with glib threads, not needed anymore
